# mineru-server

./: .gitignore  Dockerfile  LICENSE  README.md  magic-pdf.json  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
charts/: Chart.yaml  values.yaml
charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
mineru_server/: app.py  config.py
mineru_server/api/: __init__.py  pdf.py
mineru_server/models/: task.py
mineru_server/utils/: external_api.py  response.py  tar.py  threadpool.py
