[tool.poetry]
name = "mineru-server"
version = "0.1.0"
description = "MinerU API Service"
license = "MIT"
readme = "README.md"
packages = [
    { include = "mineru_server" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
